// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateTime has correct default options 1`] = `
<div
  className="grommetux-date-time"
>
  <input
    className="grommetux-input grommetux-date-time__input"
    onChange={[Function]}
    placeholder="M/D/YYYY h:mm a"
    value="4/7/2015 10:00 am"
  />
  <button
    aria-label="Date Time Icon"
    className="grommetux-button grommetux-button--plain grommetux-date-time__control"
    disabled={false}
    href={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="grommetux-button__icon"
    >
      <svg
        aria-label="clock"
        className="grommetux-control-icon grommetux-control-icon-clock grommetux-control-icon--responsive"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12,22 C17.5228475,22 22,17.5228475 22,12 C22,6.4771525 17.5228475,2 12,2 C6.4771525,2 2,6.4771525 2,12 C2,17.5228475 6.4771525,22 12,22 Z M12,5 L12,12 L17,12"
          fill="none"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`DateTime transfers arbitrary props 1`] = `
<div
  className="grommetux-date-time"
>
  <input
    className="grommetux-input grommetux-date-time__input"
    data-flavor="coconut"
    onChange={[Function]}
    placeholder="M/D/YYYY h:mm a"
    value="4/7/2015 10:00 am"
  />
  <button
    aria-label="Date Time Icon"
    className="grommetux-button grommetux-button--plain grommetux-date-time__control"
    disabled={false}
    href={undefined}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    type="button"
  >
    <span
      className="grommetux-button__icon"
    >
      <svg
        aria-label="clock"
        className="grommetux-control-icon grommetux-control-icon-clock grommetux-control-icon--responsive"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12,22 C17.5228475,22 22,17.5228475 22,12 C22,6.4771525 17.5228475,2 12,2 C6.4771525,2 2,6.4771525 2,12 C2,17.5228475 6.4771525,22 12,22 Z M12,5 L12,12 L17,12"
          fill="none"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
    </span>
  </button>
</div>
`;
